--- a/blocks/profile/__pen/profile__pen.css
+++ b/blocks/profile/__pen/profile__pen.css
@@ -2,3 +2,9 @@
   max-width: 10px;
   max-height: 10px;
 }
+@media screen and (max-width: 670px) {
+  .profile__pen {
+    width: 10px;
+    height: 10px; 
+  } 
+}
