--- a/blocks/elements/__title/elements__title.css
+++ b/blocks/elements/__title/elements__title.css
@@ -1,10 +1,11 @@
 .elements__title {
+  height: 30px;
   font-size: 24px;
   font-weight: 900;
-  line-height: 29px;
+  line-height: 25px;
   padding: 0;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden; 
+  overflow: hidden;
 }
