--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   min-height: 74px;
   margin: 0 auto;
   box-sizing: border-box;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgb(84, 84, 84, .7);
 }
 @media screen and (max-width: 670px) {
   .header {
