--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,12 +1,12 @@
 .popup__form {
-  padding: 34px 0 37px 36px;
+  padding: 0 0 37px 36px;
   max-width: 430px;
   max-height: 330px;
   box-sizing: border-box;
 }
 @media screen and (max-width: 670px) {
   .popup__form {
-    padding: 25px 22px;
+    padding: 0 22px 25px;
     max-width: 282px;
     max-height: 322px;    
   } 
