--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,8 +2,8 @@
   width: 358px;
   font-size: 14px;
   font-weight: 400;
-  line-height: 17px;
-  padding: 0;
+  line-height: 25px;
+  padding: 0 0 5px;
   border: none;
   border-bottom: 1px solid rgba(20, 0, 0, .2);
 }
