--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,15 +1,13 @@
 .popup {
   display: flex;
+  display: none;
   background: rgb(0,0,0,0.5);
   position: fixed;
   justify-content: center;
   align-items: center;
-  visibility: hidden;
+  transition: opacity 1s;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  z-index: -1;
-  transition: opacity 1s, visibility 0s 1s, z-index 1s 0s;
 }
