--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -5,10 +5,13 @@
   background-color: #000000;
   align-self: center;
   border: 1px solid white;
+  margin-top: 8px;
 }
 @media screen and (max-width: 670px) {
   .profile__button {
     align-self: start;
-    margin-top: 5px;
+    width: 18px;
+    height: 18px;
+    padding: 0;
   } 
 }
