--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  width: 100%;
 }
 @media screen and (max-width: 670px) {
   .profile__info {
