--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -1,17 +1,16 @@
 .profile__button {
   grid-area: button;
-  max-width: 24px;
-  max-height: 24px;
+  width: 24px;
+  height: 24px;
   background-color: #000000;
-  align-self: center;
   border: 1px solid white;
-  margin-top: 8px;
+  margin-top: 15px;
+  padding: 0;
 }
 @media screen and (max-width: 670px) {
   .profile__button {
-    align-self: start;
+    margin-top: 8px;
     width: 18px;
     height: 18px;
-    padding: 0;
   } 
 }
