--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -6,6 +6,7 @@
   border: 1px solid white;
   margin-top: 15px;
   padding: 0;
+  display: flex;
 }
 @media screen and (max-width: 670px) {
   .profile__button {
