--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -12,7 +12,7 @@
 }
 @media screen and (max-width: 900px) {
   .profile__name {
-    max-width: 280px;;
+    max-width: 280px;
   } 
 }
 @media screen and (max-width: 670px) {
