--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,8 @@
 @import url(../blocks/elements/__description/elements__description.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like/_dark/elements__like_dark.css);
+@import url(../blocks/elements/__trash/elements__trash.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__name/footer__name.css);
 @import url(../blocks/popup/popup.css);
@@ -34,6 +36,7 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_profession.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/popup/__form/popup__form.css);
+
 
 
 
