--- a/blocks/elements/__trash/elements__trash.css
+++ b/blocks/elements/__trash/elements__trash.css
@@ -5,9 +5,8 @@
  background-repeat: no-repeat;
   background-size: cover;
   box-sizing: border-box;
-
+  background-color: rgba(0, 0, 0, 0);
   border: none;
- /* z-index: 5;*/
   position: absolute;
   top: 20px;
   right: 20px;
