--- a/blocks/popup/__closed/popup__closed.css
+++ b/blocks/popup/__closed/popup__closed.css
@@ -1,7 +1,7 @@
 .popup__closed {
   position: absolute;
-  top: -11%;
-  right: -9%;
+  top: -40px;
+  right: -40px;
   background-image: url(../../../img/Close\ Icon.svg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -9,6 +9,7 @@
   border: 0;
   width: 32px;
   height: 32px;
+  margin: 0;
 }
 @media screen and (max-width: 670px) {
   .popup__closed {
