--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,14 @@
 .popup {
   display: flex;
-  display: none;
+  /*display: none;*/
   background: rgb(0,0,0,0.5);
   position: fixed;
   justify-content: center;
   align-items: center;
-  transition: opacity 1s;
+  visibility: hidden;
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 1s, visibility 0s 1s, z-index 1s 1s;
   top: 0;
   left: 0;
   width: 100%;
