--- a/pages/index.css
+++ b/pages/index.css
@@ -27,13 +27,16 @@
 @import url(../blocks/footer/__name/footer__name.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__container-photo/popup__container-photo.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title-photo/popup__title-photo.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__closed/popup__closed.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_name.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_profession.css);
+@import url(../blocks/popup/__img/popup__img.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/popup/__form/popup__form.css);
 
