--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,5 @@
 .popup {
   display: flex;
-  /*display: none;*/
   background: rgb(0,0,0,0.5);
   position: fixed;
   justify-content: center;
@@ -8,7 +7,7 @@
   visibility: hidden;
   opacity: 0;
   z-index: -1;
-  transition: opacity 1s, visibility 0s 1s, z-index 1s 1s;
+  transition: opacity 1s, visibility 0.5s , z-index 1s 1s linear;
   top: 0;
   left: 0;
   width: 100%;
