--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,5 +1,5 @@
 .popup__form {
-  padding: 0 0 37px 36px;
+  padding: 0 36px 37px;
   max-width: 430px;
   max-height: 330px;
   box-sizing: border-box;
