--- a/pages/index.css
+++ b/pages/index.css
@@ -33,9 +33,13 @@
 @import url(../blocks/popup/__title-photo/popup__title-photo.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_disabled/popup__save_disabled.css);
 @import url(../blocks/popup/__closed/popup__closed.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_name.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_profession.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__photo/popup__photo.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/popup/__form/popup__form.css);
