--- a/pages/index.css
+++ b/pages/index.css
@@ -41,7 +41,7 @@
 @import url(../blocks/popup/__input/_type/popup__input_type_profession.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/popup/__photo/popup__photo.css);
-@import url(../blocks/link/link.css);
+@import url(../blocks/button/button.css);
 @import url(../blocks/popup/__form/popup__form.css);
 
 
