--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,7 +1,7 @@
 .popup__form {
   padding: 0 36px 37px;
   max-width: 430px;
-  max-height: 330px;
+  height: 330px;
   box-sizing: border-box;
 }
 @media screen and (max-width: 670px) {
