--- a/src/blocks/popup/__closed/popup__closed.css
+++ b/src/blocks/popup/__closed/popup__closed.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: -40px;
   right: -40px;
-  background-image: url(../../../img/Close\ Icon.svg);
+  background-image: url(../../../img/CloseIcon.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-color: rgba(20, 0, 0, 0);
