--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 .header__logo{background-image:url(1317f38edcb386d59936.png);background-repeat:no-repeat;background-size:contain;height:33px;width:142px}@media screen and (max-width:670px){.header__logo{height:24px;margin-left:27px;width:103px}}
 .profile{box-sizing:border-box;display:flex;justify-content:space-between;margin-top:40px}@media screen and (max-width:670px){.profile{flex-direction:column;justify-content:center;margin-top:42px}}
 .profile__info{display:flex;flex-direction:row;justify-content:flex-start;width:100%}@media screen and (max-width:670px){.profile__info{align-items:center;flex-direction:column}}
-.profile__avatar{background-image:url(09d950f5d938a9c05856.svg);background-repeat:no-repeat;background-size:contain;border-radius:50%;height:120px;width:120px}
+.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}.profile__avatar:hover{background-color:rgba(0,0,0,.8);background-image:url(bbf66eb7b81dccb49b10.png);background-position:50%;background-repeat:no-repeat;background-size:26px;transition:background-color .5s}
 .profile__add-button{background-color:#000;border:2px solid #fff;margin:35px 0;min-height:50px;min-width:150px}@media screen and (max-width:670px){.profile__add-button{margin:33px 19px 0;min-width:282px}}
 .profile__plus{max-height:22px;max-width:22px}@media screen and (max-width:670px){.profile__plus{max-height:18px;max-width:18px}}
 .profile__profile-info{box-sizing:border-box;display:grid;gap:9px 19px;grid-template-areas:"name button" "description description";grid-template-columns:repeat(2,max-content);grid-template-rows:repeat(2);margin-left:30px;max-width:336px;padding:20px 0}@media screen and (max-width:670px){.profile__profile-info{gap:8px 12px;grid-template-areas:"name button" "description button";margin:26px 0 0 24px;max-width:282px;padding:0}}
@@ -14,33 +14,41 @@
 .profile__button{background-color:#000;border:1px solid #fff;display:flex;grid-area:button;height:24px;margin-top:15px;padding:0;width:24px}@media screen and (max-width:670px){.profile__button{height:18px;margin-top:8px;width:18px}}
 .profile__description{font-size:18px;font-weight:400;grid-area:description;line-height:22px;margin:0;max-width:310px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:670px){.profile__description{font-size:14px;line-height:17px;max-width:200px;text-align:center}}
 .profile__pen{align-self:center;margin:0 auto;max-height:10px;max-width:10px}
+.profile__avatar-edit{border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;padding:0;position:relative;width:120px;z-index:-1}
 .elements{box-sizing:border-box;margin:50px auto 0;padding:0}@media screen and (max-width:670px){.elements{margin:36px 19px 0}}
 .elements__items{background-color:#000;box-sizing:border-box;display:grid;gap:20px 17px;grid-template-columns:repeat(3,1fr);grid-template-rows:repeat(2,1fr);justify-items:center;margin:0;padding:0}@media screen and (max-width:900px){.elements__items{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(3,1fr)}}@media screen and (max-width:670px){.elements__items{gap:20px;grid-template-columns:repeat(1,1fr);grid-template-rows:repeat(6,1fr)}}
 .element__item{border-radius:50px;box-sizing:border-box;display:flex;flex-direction:column;list-style-type:none;max-height:361px;max-width:282px;position:relative}
 .element__img{border-radius:10px 10px 0 0;cursor:pointer;height:282px;margin:0;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;padding:0;width:282px}
-.element__description{background-color:#fff;border-radius:0 0 10px 10px;box-sizing:border-box;color:#000;display:flex;justify-content:space-between;margin:0;max-height:79px;padding:28px 20px 31px}
+.element__description{background-color:#fff;border-radius:0 0 10px 10px;box-sizing:border-box;color:#000;display:flex;justify-content:space-between;margin:0;max-height:79px;padding:22px 20px}
 .element__title{font-size:24px;font-weight:900;height:30px;line-height:25px;margin:0;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
 .element__like{background-color:#fff;background-image:url(87ed371465c7a6a1cd01.svg);background-position:bottom;background-repeat:no-repeat;background-size:contain;border:none;box-sizing:border-box;height:19px;transition-duration:3s;width:22px}
+.element__like-container{display:flex;flex-direction:column}
 .element__like_dark{background-image:url(98c6468a4f7ddf50d1df.png)}
 .element__trash{background-color:transparent;background-image:url(ce3b64935accf9b8212e.svg);background-repeat:no-repeat;background-size:cover;border:none;box-sizing:border-box;height:19px;position:absolute;right:20px;top:20px;width:18px}
+.element__count{Line-height:15.73px;font-size:13px;margin:0;padding:0;text-align:center}
 .footer{box-sizing:border-box;margin:66px 0 60px;max-width:318px}@media screen and (max-width:670px){.footer{margin:48px 19px 0;max-width:282px}}
 .footer__name{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:670px){.footer__name{font-size:14px;line-height:17px}}
-.popup{align-items:center;background:rgb(0,0,0,.9);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:opacity 1s,visibility .5s,z-index 1s linear 1s;visibility:hidden;width:100%;z-index:-1}
+.popup{align-items:center;background:rgb(0,0,0,.9);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:opacity 1s,visibility .5s,z-index 1s linear 1s;width:100%;z-index:-1}
 .popup__container{background-color:#fff;border-radius:10px 10px 10px 10px;color:#000;position:relative}
 .popup__container-photo{position:relative}
 .popup_opened{display:flex;opacity:1;transition:opasity 1s;visibility:visible;z-index:10}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:0;padding:34px 0 0 36px}@media screen and (max-width:670px){.popup__title{font-size:18px;line-height:22px;padding:25px 22px 0}}
 .popup__title-photo{font-size:12px;font-weight:400;line-height:15px;margin:0;padding-top:10px;text-align:left}
 .popup__input{border:none;border-bottom:1px solid rgba(20,0,0,.2);font-size:14px;font-weight:400;line-height:25px;padding:0 0 5px;width:358px}.popup__input:focus{border-bottom:none;outline:2px solid blue}@media screen and (max-width:670px){.popup__input{width:238px}}
-.popup__save{background-color:#000;border:none;border-radius:2% 2% 2% 2%;color:#fff;font-size:18px;font-weight:400;height:50px;line-height:22px;margin-top:40px;text-align:center;width:358px}@media screen and (max-width:670px){.popup__save{font-size:14px;height:46px;line-height:17px;margin-top:44px;width:238px}}
+.popup__save{background-color:#000;border:none;border-radius:2% 2% 2% 2%;color:#fff;font-size:18px;font-weight:400;height:50px;line-height:22px;margin-top:48px;text-align:center;width:358px}@media screen and (max-width:670px){.popup__save{font-size:14px;height:46px;line-height:17px;margin-top:44px;width:238px}}
 .popup__save_disabled{background-color:#fff;border:1px solid #000;color:#000;opacity:.2}
 .popup__closed{background-color:rgba(20,0,0,0);background-image:url(2ceb783afbab75916ddc.svg);background-repeat:no-repeat;background-size:contain;border:0;height:32px;margin:0;position:absolute;right:-40px;top:-40px;width:32px}@media screen and (max-width:670px){.popup__closed{height:20px;right:0;top:-11%;width:20px}}
+
 .popup__error{box-sizing:border-box;color:red;display:block;font-size:12px;font-weight:400;line-height:14.52px;margin-top:5px;min-height:10px}
 .popup__error_visible{display:block}
 .popup__input_type_name{margin-top:45px}@media screen and (max-width:670px){.popup__input_type_name{margin-top:71px}}
 .popup__input_type_profession{margin-top:27px}
 .popup__input_type_error{border-color:red}
+.popup__input_type_avatar{margin-top:54px}
 .popup__photo{max-height:75vh;max-width:75vw}
 .button:hover{cursor:pointer;opacity:.5}.button:disabled{cursor:auto;opacity:.2}
 .popup__form{box-sizing:border-box;height:330px;max-width:430px;padding:0 36px 37px}@media screen and (max-width:670px){.popup__form{max-height:322px;max-width:282px;padding:0 22px 25px}}
+.popup__form_avatar{box-sizing:border-box;height:215px;max-width:430px}
+.popup__form_delete{box-sizing:border-box;height:124px;max-width:430px}
+
 
