--- a/src/blocks/element/__description/element__description.css
+++ b/src/blocks/element/__description/element__description.css
@@ -4,7 +4,7 @@
   color: black;
   display: flex;
   justify-content: space-between;
-  padding: 28px 20px 31px;
+  padding: 22px 20px;
   box-sizing: border-box;
   margin: 0;
   border-radius: 0 0 10px 10px;
