--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -1,5 +1,6 @@
 .profile {
   margin-top: 40px;
+  margin-bottom: 50px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
