--- a/main.css
+++ b/main.css
@@ -4,9 +4,9 @@
 .page__container{box-sizing:border-box;margin:45px auto 60px;max-width:880px;min-width:282px}@media screen and (max-width:900px){.page__container{max-width:650px}}@media screen and (max-width:670px){.page__container{margin:28px auto 36px;max-width:320px}}
 .header{border-bottom:1px solid rgba(84,84,84,.7);box-sizing:border-box;margin:0 auto;min-height:74px}@media screen and (max-width:670px){.header{min-height:56px}}
 .header__logo{background-image:url(1317f38edcb386d59936.png);background-repeat:no-repeat;background-size:contain;height:33px;width:142px}@media screen and (max-width:670px){.header__logo{height:24px;margin-left:27px;width:103px}}
-.profile{box-sizing:border-box;display:flex;justify-content:space-between;margin-top:40px}@media screen and (max-width:670px){.profile{flex-direction:column;justify-content:center;margin-top:42px}}
+.profile{box-sizing:border-box;display:flex;justify-content:space-between;margin-bottom:50px;margin-top:40px}@media screen and (max-width:670px){.profile{flex-direction:column;justify-content:center;margin-top:42px}}
 .profile__info{display:flex;flex-direction:row;justify-content:flex-start;width:100%}@media screen and (max-width:670px){.profile__info{align-items:center;flex-direction:column}}
-.profile__avatar{border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;opacity:1;padding:0;position:relative;width:120px;z-index:-1}
+.profile__avatar{border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;opacity:1;padding:0;position:relative;width:120px}
 .profile__add-button{background-color:#000;border:2px solid #fff;margin:35px 0;min-height:50px;min-width:150px}@media screen and (max-width:670px){.profile__add-button{margin:33px 19px 0;min-width:282px}}
 .profile__plus{max-height:22px;max-width:22px}@media screen and (max-width:670px){.profile__plus{max-height:18px;max-width:18px}}
 .profile__profile-info{box-sizing:border-box;display:grid;gap:9px 19px;grid-template-areas:"name button" "description description";grid-template-columns:repeat(2,max-content);grid-template-rows:repeat(2);margin-left:30px;max-width:336px;padding:20px 0}@media screen and (max-width:670px){.profile__profile-info{gap:8px 12px;grid-template-areas:"name button" "description button";margin:26px 0 0 24px;max-width:282px;padding:0}}
@@ -14,7 +14,7 @@
 .profile__button{background-color:#000;border:1px solid #fff;display:flex;grid-area:button;height:24px;margin-top:15px;padding:0;width:24px}@media screen and (max-width:670px){.profile__button{height:18px;margin-top:8px;width:18px}}
 .profile__description{font-size:18px;font-weight:400;grid-area:description;line-height:22px;margin:0;max-width:310px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:670px){.profile__description{font-size:14px;line-height:17px;max-width:200px;text-align:center}}
 .profile__pen{align-self:center;margin:0 auto;max-height:10px;max-width:10px}
-.profile__avatar-edit-button{border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;padding:0;width:120px}.profile__avatar-edit-button:hover{background-color:rgba(0,0,0,.8);background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;background-size:26px;z-index:1}
+.profile__avatar-edit-button{border-radius:50%;margin:0;-o-object-fit:cover;object-fit:cover;padding:0;position:relative}.profile__avatar-edit-button,.profile__avatar-edit-button:hover:before{align-items:center;display:flex;height:120px;justify-content:center;width:120px}.profile__avatar-edit-button:hover:before{background-color:rgba(0,0,0,.8);content:url(bbf66eb7b81dccb49b10.png);left:-2px;position:absolute;top:-2px;z-index:1}
 .elements__items{background-color:#000;box-sizing:border-box;display:grid;gap:20px 17px;grid-template-columns:repeat(3,1fr);grid-template-rows:repeat(2,1fr);justify-items:center;margin:0;padding:0}@media screen and (max-width:900px){.elements__items{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(3,1fr)}}@media screen and (max-width:670px){.elements__items{gap:20px;grid-template-columns:repeat(1,1fr);grid-template-rows:repeat(6,1fr)}}
 .element__item{border-radius:50px;box-sizing:border-box;display:flex;flex-direction:column;list-style-type:none;max-height:361px;max-width:282px;position:relative}
 .element__img{border-radius:10px 10px 0 0;cursor:pointer;height:282px;margin:0;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;padding:0;width:282px}
@@ -37,7 +37,6 @@
 .popup__save{background-color:#000;border:none;border-radius:2% 2% 2% 2%;color:#fff;font-size:18px;font-weight:400;height:50px;line-height:22px;margin-top:48px;text-align:center;width:358px}@media screen and (max-width:670px){.popup__save{font-size:14px;height:46px;line-height:17px;margin-top:44px;width:238px}}
 .popup__save_disabled{background-color:#fff;border:1px solid #000;color:#000;opacity:.2}
 .popup__closed{background-color:rgba(20,0,0,0);background-image:url(2ceb783afbab75916ddc.svg);background-repeat:no-repeat;background-size:contain;border:0;height:32px;margin:0;position:absolute;right:-40px;top:-40px;width:32px}@media screen and (max-width:670px){.popup__closed{height:20px;right:0;top:-11%;width:20px}}
-
 .popup__error{box-sizing:border-box;color:red;display:block;font-size:12px;font-weight:400;line-height:14.52px;margin-top:5px;min-height:10px}
 .popup__error_visible{display:block}
 .popup__input_type_name{margin-top:45px}@media screen and (max-width:670px){.popup__input_type_name{margin-top:71px}}
@@ -49,5 +48,4 @@
 .popup__form{box-sizing:border-box;height:330px;max-width:430px;padding:0 36px 37px}@media screen and (max-width:670px){.popup__form{max-height:322px;max-width:282px;padding:0 22px 25px}}
 .popup__form_avatar{box-sizing:border-box;height:215px;max-width:430px}
 .popup__form_delete{box-sizing:border-box;height:124px;max-width:430px}
-
 
