--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
 .element__like-container{display:flex;flex-direction:column}
 .element__like_dark{background-image:url(98c6468a4f7ddf50d1df.png)}
 .element__trash{background-color:transparent;background-image:url(ce3b64935accf9b8212e.svg);background-repeat:no-repeat;background-size:cover;border:none;box-sizing:border-box;height:19px;position:absolute;right:20px;top:20px;width:18px}
-.element__count{Line-height:15.73px;font-size:13px;margin:0;padding:0;text-align:center}
+.element__count{font-size:13px;line-height:15.73px;margin:0;padding:0;text-align:center}
 .footer{box-sizing:border-box;margin:66px 0 60px;max-width:318px}@media screen and (max-width:670px){.footer{margin:48px 19px 0;max-width:282px}}
 .footer__name{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;padding:0}@media screen and (max-width:670px){.footer__name{font-size:14px;line-height:17px}}
 .popup{align-items:center;background:rgb(0,0,0,.9);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:opacity 1s,visibility .5s,z-index 1s linear 1s;width:100%;z-index:-1}
